fixed spacing

--- a/src/components/project/styles/Project.module.css
+++ b/src/components/project/styles/Project.module.css
@@ -84,12 +84,14 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+        padding-left: 2rem;
     }
     .tech {
         flex-direction: row;
     }
-    .captions {
-
+}
+@media (min-width: 1280px) {
+    .content {
+        padding-left: 0;
     }
-
 }
